# VSB-second-year

./: .gitignore  README.md
ALGII/cv1/: main.cpp
ALGII/cv10/: main.cpp
ALGII/cv2/: main.cpp
ALGII/cv3/: main.cpp
ALGII/cv4/: main.cpp
ALGII/cv5/: main.cpp
ALGII/cv6/: main.cpp
ALGII/cv7/: main.cpp
ALGII/cv8/: main.cpp
ALGII/cv9/: main.cpp
ALGII/hw1/: main.cpp
ALGII/hw10/: main.cpp
ALGII/hw11/: main.cpp
ALGII/hw12/: main.cpp
ALGII/hw2/: main.cpp
ALGII/hw3/: main.cpp
ALGII/hw4/: main.cpp
ALGII/hw5/: main.cpp
ALGII/hw6/: main.cpp
ALGII/hw7/: main.cpp
ALGII/hw8/: main.cpp
ALGII/hw9/: main.cpp
ALGII/project/: Doxyfile  Graph.cpp  Graph.h  main.cpp
CPP/cv1/: basics.cpp
CPP/cv4/: CMakeLists.txt  forward-decl.cpp  inheritance.cpp  interpreter.cpp  polymorphism.cpp  sum-types.cpp  type-erasure.cpp
CPP/cv5/: CMakeLists.txt  aliasing.cpp  copy-elision.cpp  iterator.cpp  move-semantics.cpp  smart-pointers.cpp
CPP/cv6/: CMakeLists.txt  stream.cpp  string.cpp  string_view.cpp  student.h  student_tests.cpp
CPP/cv7/: CMakeLists.txt  algorithms.cpp  associative-containers.cpp  data-structures.cpp  hash-map.cpp  ranges.cpp  rng.cpp  tuples.cpp  vector.cpp
CPP/cv8/: CMakeLists.txt  concepts.cpp  specialization.cpp  template-class.cpp  template-lib.cpp  template-lib.h  template-main.cpp  template-template.cpp  templates.cpp  type-traits.cpp  values.cpp
CPP/hw1/: assignment.md  tasks.cpp  tasks.h
CPP/hw2/: tasks.cpp  tasks.h
CPP/hw3/: tasks.cpp  tasks.h
CPP/hw4/: tasks.cpp  tasks.h
CPP/hw5/: assignment.md  tasks.cpp  tasks.h
CPP/hw6/: tasks.cpp  tasks.h
CPP/hw7/: tasks.cpp
CPP/hw8/: tasks.h  tests.cpp
CPP/hw9/: tasks.h
CSI/: Brick.cs  ClassArray.cs  Csharp1_cv2.sln  JaggedArray.cs  Program.cs  README.md
CSI/Csharp1_cv2/: MultidimensionalArray .cs
CSI/cs1_cv3/: Program.cs  cs1_cv3.sln
CSI/cs1_cv6/: Employee.cs  HourlySalaryEmployee.cs  Manager.cs  MonthlySalaryEmployee.cs  Person.cs  Population.cs  Program.cs  Secretary.cs  Unemployed.cs  Worker.cs  cs1_cv6.sln
CSI/cs1_cv7/: ArrayHelper.cs  IKeyValuePair.cs  Node.cs  Program.cs  TreeMap.cs  cs1_cv7.sln
CSI/cs1_cv9/: Contact.cs  ContactComparer.cs  NumberComparer.cs  Program.cs  cs1_cv9.sln
CSI/cs1_hw1/: Employee.cs  Program.cs  Utility.cs  cs1_hw1.sln  employees.csv
CSI/cs1_hw2/: Appointment.cs  Attendee.cs  Calendar.cs  Event.cs  Holiday.cs  IAttendees.cs  Meeting.cs  Program.cs  cs1_hw2.sln
CSI/cs1_hw4/: AgeComparer.cs  Customer.cs  ObservableList .cs  Program.cs  cs1_hw4.csproj  cs1_hw4.sln
CSII/Reflection/: ReflectionApp.sln
CSII/cv3/: Program.cs  SimpleStack.cs  cv3.sln
CSII/cv4/: BrowserAuthMiddleware.cs  ErrorMiddleware.cs  ExceptionHandler.cs  FileMiddleware.cs  FirstMiddleware.cs  FormMiddleware.cs  (+5 more)
DSI/: prep1.sql  prepLastYear.sql
URO/: cv1.py
(+273 files in other folders)
